v0.5/fastn-parser/src/snapshots/fastn_p1__test__parse_output@003-module-doc.ftd.snap
---
source: fastn-p1/src/lib.rs
expression: "fastn_parser::ParseOutput::parse(\"foo\", &s).debug(&s)"
input_file: fastn-p1/t/003-module-doc.ftd
---
doc_name: foo
items:
  - comment: ";; this is a comment\n"
  - comment: ";; some more comment\n"
module_doc: ";-; this is some module doc\n;-; multiline module docs!\n"
