v0.5/fastn-parser/src/snapshots/fastn_p1__test__parse_output@004-simple-section.ftd.snap
---
source: fastn-p1/src/lib.rs
expression: "fastn_parser::ParseOutput::parse(\"foo\", &s).debug(&s)"
input_file: fastn-p1/t/004-simple-section.ftd
---
doc_name: foo
items:
  - error: kinded_name_not_found
module_doc: ~
